--- a/q1/Makefile
+++ b/q1/Makefile
@@ -1,7 +1,13 @@
 CC = mpiicc
 MPI_FLAGS
 
-TARGETS = q1a
+TARGETS = q1a q1b
 
 q1a: q1a.c
-	$(CC) -o $@ q1a.c
+	$(CC) -o $@ $<
+
+q1b: q1b.c
+	$(CC) -o $@ $<
+
+clean:
+	rm -f $(TARGETS)
