Fixed compile commands

--- a/q1/Makefile
+++ b/q1/Makefile
@@ -1,13 +1,13 @@
-CC = mpiicc
-MPI_FLAGS
+CC = mpicc
+CFLAGS = -Wall -Wextra -g -O2
 
 TARGETS = q1a q1b
 
 q1a: q1a.c
-	$(CC) -o $@ $<
+	$(CC) $(CFLAGS) -o $@ $<
 
 q1b: q1b.c
-	$(CC) -o $@ $<
+	$(CC) $(CFLAGS) -o $@ $<
 
 clean:
 	rm -f $(TARGETS)
