Added part b implementation using similar implementations.

--- a/q2/Makefile
+++ b/q2/Makefile
@@ -1,12 +1,18 @@
 CC = mpicc
 CFLAGS = -Wall -Wextra -g -O2
 
-TARGETS = q2a_two_nodes q2a_four_nodes
+TARGETS = q2a_two_nodes q2a_four_nodes q2b_two_nodes q2b_four_nodes
 
 q2a_two_nodes: q2a_two_nodes.c
 	$(CC) $(CFLAGS) -o $@ $<
 
 q2a_four_nodes: q2a_four_nodes.c
+	$(CC) $(CFLAGS) -o $@ $<
+
+q2b_two_nodes: q2b_two_nodes.c
+	$(CC) $(CFLAGS) -o $@ $<
+
+q2b_four_nodes: q2b_four_nodes.c
 	$(CC) $(CFLAGS) -o $@ $<
 
 clean:
