Fixed implementation to have the same amount of processes.

--- a/q2/Makefile
+++ b/q2/Makefile
@@ -2,6 +2,7 @@ CC = mpicc
 CFLAGS = -Wall -Wextra -g -O2
 
 TARGETS = q2a_two_nodes q2a_four_nodes q2b_two_nodes q2b_four_nodes
+all: $(TARGETS)
 
 q2a_two_nodes: q2a_two_nodes.c
 	$(CC) $(CFLAGS) -o $@ $<
